# oxid-os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  macros.rs  main.rs  qemu.rs  serial.rs  test.rs  tty.rs  vga.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
