[package]
name = "libr-os"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9.18"
lazy_static = { version = "1.4.0", "features" = ["spin_no_std"] }
spin = "0.9.0"
uart_16550 = "0.2.14"
volatile = "0.2.6"
x86_64 = "0.14.3"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33     # (0x10 << 1) | 1 = 33
test-timeout = 300              # in seconds

[[test]]
name = "should_panic"
harness = false
